--- a/src/app/features/ui-test/img-test/img-test.component.scss
+++ b/src/app/features/ui-test/img-test/img-test.component.scss
@@ -25,7 +25,6 @@ form {
     @include absoluteCenter();
   }
   &:hover {
-    background: red;
     border-color: $blue;
     img {
       content: url('/assets/32pxplusblue.svg');
