--- a/src/app/shared/components/image-upload-v3/image-upload-v3.component.scss
+++ b/src/app/shared/components/image-upload-v3/image-upload-v3.component.scss
@@ -1,6 +1,9 @@
 @import 'src/assets/styles/colors';
 @import 'src/assets/styles/mixins/alignment';
 
+:host {
+  position: relative;
+}
 :host.circle {
   border-radius: 50% !important;
   overflow: hidden;
@@ -11,12 +14,15 @@
 }
 .file {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 0;
+  height: 0;
+  z-index: -1;
+  // width: 100%;
+  // height: 100%;
   opacity: 0;
-  z-index: 2;
-  top: 0;
-  left: 0;
+  // z-index: 2;
+  // top: 0;
+  // left: 0;
 }
 image-cropper {
   --cropper-outline-color: rgba(255, 255, 255, 1);
@@ -85,7 +91,12 @@ image-cropper ::ng-deep {
   width: 44px !important;
   height: 44px !important;
   color: $blue;
+  border-color: $blue;
   margin: 0 8px;
+  position: relative;
+  span {
+    @include absoluteCenter();
+  }
 }
 
 .hidden {
@@ -144,4 +155,33 @@ h3 {
   width: 0 !important;
   height: 0 !important;
   position: absolute !important;
+  overflow: hidden !important;
+}
+
+image-cropper ::ng-deep .overlay > .corner {
+  z-index: 2;
+  position: absolute;
+  transform-origin: center center;
+}
+
+image-cropper ::ng-deep .overlay > .corner {
+  &.topleft {
+    left: 0;
+    top: 0;
+  }
+  &.topright {
+    right: 0;
+    top: 0;
+    transform: rotate(90deg);
+  }
+  &.bottomleft {
+    left: 0;
+    bottom: 0;
+    transform: rotate(270deg);
+  }
+  &.bottomright {
+    bottom: 0;
+    right: 0;
+    transform: rotate(180deg);
+  }
 }
